tests/rosetta/out/Java/catamorphism.error
javac: exit status 1
/tmp/Catamorphism.java:16: error: incompatible types: Integer cannot be converted to List<Integer>
        List<Integer> r = xs.get(0);
                                ^
/tmp/Catamorphism.java:19: error: cannot find symbol
            r = f(r, xs.get(i));
                ^
  symbol:   method f(List<Integer>,Integer)
  location: class Catamorphism
/tmp/Catamorphism.java:22: error: incompatible types: List<Integer> cannot be converted to int
        return r;
               ^
/tmp/Catamorphism.java:26: error: incompatible types: Object is not a functional interface
        System.out.println(fold((a, b) -> add(a, b), n));
                           ^
/tmp/Catamorphism.java:27: error: incompatible types: Object is not a functional interface
        System.out.println(fold((a, b) -> sub(a, b), n));
                           ^
/tmp/Catamorphism.java:28: error: incompatible types: Object is not a functional interface
        System.out.println(fold((a, b) -> mul(a, b), n));
                           ^
Note: Some messages have been simplified; recompile with -Xdiags:verbose to get full output
6 errors
