tests/rosetta/out/Java/catamorphism.java
// Generated by Mochi compiler v0.10.26 on 2025-07-16T12:11:18Z
// catamorphism.mochi
import java.util.*;

public class Catamorphism {
    static int add(int a, int b) {
        return a + b;
    }
    static int sub(int a, int b) {
        return a - b;
    }
    static int mul(int a, int b) {
        return a * b;
    }
    static int fold(Object f, List<Integer> xs) {
        List<Integer> r = xs.get(0);
        int i = 1;
        while (i < xs.size()) {
            r = f(r, xs.get(i));
            i = (int)(i + 1);
        }
        return r;
    }
    public static void main(String[] args) {
    List<Integer> n = new ArrayList<>(Arrays.asList(1, 2, 3, 4, 5));
    System.out.println(fold((a, b) -> add(a, b), n));
    System.out.println(fold((a, b) -> sub(a, b), n));
    System.out.println(fold((a, b) -> mul(a, b), n));
    }
}
